# anki-morphs-mecab-korean

./: .gitignore  README.md  pyproject.toml
addon/anki_morphs_mecab_korean/: __init__.py  constants.py  names.txt  reading.py  test_mecab.py  test_mecab2.py  user_nnp.dic
scripts/: install_addon.py  make_user_dic.sh  parse.py  user_nnp.csv
tests/: test_import.py
